--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<doctype html>
 <html>
-  <h1>Arquivo em HTML</h1>
-</html>
+<h1><strong>Hades e rougelikes</strong></h1>
+
+<p>Hades é um jogo <strong>Rougelike</strong> 3D,que foi lançado para xbox one,playstation 4 e consoles de gerações acima</p>
+
+<p><em>O conceito de jogo <strong>rougelike</strong> é basicamente, se você morrer,você perde todo seu progresso no mapa do jogo,voltando a area incial e perdendo melhorias coletadas durante o caminho(Na maioria dos jogos do genero é possível comprar algumas melhorias que se mantem mesmo após a morte)<em></p>
+
+<p>Eu já fiz uma apresentação sobre o jogo Hades na escola uma vez,portanto dessa vez eu vou me focar melhor no genero do jogo em si</p>
