--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <doctype html>
 <html>
-<h1><strong>Hades e rougelikes</strong></h1>
+<h1><strong>Danganronpa Trigger Happy Havoc</strong></h1>
 
-<p>Hades é um jogo <strong>Rougelike</strong> 3D,que foi lançado para xbox one,playstation 4 e consoles de gerações acima</p>
+<p><h2><em>Danganronpa é um jogo de misterio/Investigação de tema psycho pop, onde 15 estudantes convidados para a escola Hopes Peak, uma escola feita para alunos que são os melhores do mundo em areas específicas, os protagonistas pertencem a classe de numero 78 da escola,porém,quando chegam são sequestrados para jogos de assassinato ou ficaram presos na escola para sempre<em><h2><p>
 
-<p><em>O conceito de jogo <strong>rougelike</strong> é basicamente, se você morrer,você perde todo seu progresso no mapa do jogo,voltando a area incial e perdendo melhorias coletadas durante o caminho(Na maioria dos jogos do genero é possível comprar algumas melhorias que se mantem mesmo após a morte)<em></p>
 
-<p>Eu já fiz uma apresentação sobre o jogo Hades na escola uma vez,portanto dessa vez eu vou me focar melhor no genero do jogo em si</p>
+
+<p>O protagonista(Makoto Naegi) é controlado pelo jogador e tem que resolver quase que sozinho os misterios de cada assassinato,pra descobrir em uma corte do jogo quem é o assassino</p>
+
+<img clas="fit-picture"
+     src="https://static.wikia.nocookie.net/danganronpa/images/5/55/Danganronpa_1_CG_-_Sakura_fighting_Monokuma_%2808%29.png/revision/latest?cb=20180215203433"
+     alt="Grapefruit slice atop a pile of other slices">
+    
