--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <doctype html>
 <html>
-<h1><strong>Danganronpa Trigger Happy Havoc</strong></h1>
+<h1><strong>Danganronpa Trigger Happy Havoc(Feito por Samuel de Andrade N°29 e Rhuan de França N°27 1°E)</strong></h1>
 
 <p><h2><em>Danganronpa é um jogo de misterio/Investigação de tema psycho pop, onde 15 estudantes convidados para a escola Hopes Peak, uma escola feita para alunos que são os melhores do mundo em areas específicas, os protagonistas pertencem a classe de numero 78 da escola,porém,quando chegam são sequestrados para jogos de assassinato ou ficaram presos na escola para sempre<em><h2><p>
 
